# Cloudflare-Manager

./: .dockerignore  .gitignore  API_TOKEN_PERMISSIONS.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.unified.yml  nginx-unified.conf  supervisord.conf
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: cloudflare.rs  handlers.rs  main.rs  models.rs
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: index.ts
frontend/src/components/: Toast.vue
frontend/src/composables/: useToast.ts
frontend/src/data/: workerTemplates.ts
frontend/src/router/: index.ts
frontend/src/stores/: account.ts  theme.ts
frontend/src/styles/: island-theme.css
frontend/src/utils/: history.ts  toast.ts
frontend/src/views/: Accounts.vue  Analytics.vue  Cache.vue  Certificates.vue  D1.vue  DNS.vue  Dashboard.vue  Firewall.vue  History.vue  Layout.vue  Optimize.vue  PageRules.vue  QuickDeploy.vue  RateLimits.vue  SSL.vue  WAF.vue  WorkerTemplates.vue  Workers.vue  WorkersKV.vue  Zones.vue
