[package]
name = "cloudflare-manager-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
env_logger = "0.11"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
urlencoding = "2.1"

[profile.release]
opt-level = "z"     # 优化二进制大小
lto = true          # 链接时优化
codegen-units = 1   # 更好的优化
strip = true        # 去除符号表
